[package]
name = "module-10-yewchat"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-channel = "0.3"
futures-util = "0.3"
gloo-net = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement", "Location", "Window"] }
yew = { version = "0.21", features = ["csr"] }
